--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                 <div class="team-member">
                     <img src="mrwells.png" alt="Avatar du Membre">
                     <h3>Lou</h3>
-                    <p class="role-bold">Rôle: Fondatrice Général </p>
+                    <p class="role-developer">Rôle: Fondatrice Général (💍Ethan) </p>
                 </div>
                 <div class="team-member">
                     <img src="ethan.png" alt="Avatar du Membre">
                     <h3>Ethan Hunt</h3>
-                    <p class="role-bold">Rôle: Fondateur Général </p>
+                    <p class="role-bold">Rôle: Fondateur Général (💍Lou)</p>
                 </div>
                 <div class="team-member">
                     <img src="briann.png" alt="Avatar du Membre">
