--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>SkyIsland</h1>
+                <h1>France Life RP</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Accueil</a></li>
