--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="team-member">
                     <img src="ethan.png" alt="Avatar du Membre">
                     <h3>Ethan Hunt</h3>
-                    <p class="role-bold">Rôle: Fondateur Général (💍Lou)</p>
+                    <p class="role-developer">Rôle: Fondateur Général (💍Lou)</p>
                 </div>
                 <div class="team-member">
                     <img src="briann.png" alt="Avatar du Membre">
