--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#discord">Discord</a></li>
                 <li><a href="#team">Équipe</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="boutique.html">Boutique</a></li>
             </ul>
             <div class="menu-toggle">
                 <span></span>
