--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p class="role-developer">Rôle: Fondatrice Général (💍Ethan) </p>
                 </div>
                 <div class="team-member">
-                    <img src="ethan.png" alt="Avatar du Membre">
+                    <img src="fhj.png" alt="Avatar du Membre">
                     <h3>Ethan Hunt</h3>
                     <p class="role-developer">Rôle: Fondateur Général (💍Lou)</p>
                 </div>
