--- a/index.html
+++ b/index.html
@@ -91,6 +91,31 @@
                     <h3>Julien Black</h3>
                     <p class="role-bold">Rôle: Fondateur </p>
                 </div>
+                <div class="team-member">
+                    <img src="admin-djadja.png" alt="Avatar du Membre">
+                    <h3>Djadja</h3>
+                    <p class="role-bold">Rôle: Admin </p>
+                </div>
+                <div class="team-member">
+                    <img src="admin-marti.png" alt="Avatar du Membre">
+                    <h3>Marti Ixe</h3>
+                    <p class="role-bold">Rôle: Admin </p>
+                </div>
+                <div class="team-member">
+                    <img src="rs-flavien.png" alt="Avatar du Membre">
+                    <h3>Flavien Drift</h3>
+                    <p class="role-bold">Rôle: Resp. Staff </p>
+                </div>
+                <div class="team-member">
+                    <img src="helpeur-liam.png" alt="Avatar du Membre">
+                    <h3>Liam Anderson</h3>
+                    <p class="role-bold">Rôle: Helpeur </p>
+                </div>
+                <div class="team-member">
+                    <img src="helpeur-louis.png" alt="Avatar du Membre">
+                    <h3>Louis Anderson</h3>
+                    <p class="role-bold">Rôle: Helpeur </p>
+                </div>
                 <!-- Ajouter plus de membres de l'équipe si nécessaire -->
             </div>
         </div>
