--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="team-member">
                     <img src="mrwells.png" alt="Avatar du Membre">
                     <h3>Lou</h3>
-                    <p class="role-developer">Rôle: Fondatrice Général (💍Ethan) </p>
+                    <p class="role-developer">Rôle: Fondatrice Général Adjoint (💍Ethan) </p>
                 </div>
                 <div class="team-member">
                     <img src="fhj.png" alt="Avatar du Membre">
@@ -74,7 +74,7 @@
                 <div class="team-member">
                     <img src="briann.png" alt="Avatar du Membre">
                     <h3>Briann Blasco</h3>
-                    <p class="role-bold">Rôle: Fondateur Général Adjoint </p>
+                    <p class="role-bold">Rôle: Fondateur Général </p>
                 </div>
                 <div class="team-member">
                     <img src="mathéo.png" alt="Avatar du Membre">
