--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>Équipe</h2>
             <div class="team-members">
                 <div class="team-member">
-                    <img src="mrwells.png" alt="Avatar du Membre">
+                    <img src="OIG3.ADu4ROejtdidl.jpeg" alt="Avatar du Membre">
                     <h3>Lou</h3>
                     <p class="role-developer">Rôle: Fondatrice Général Adjoint (💍Ethan) </p>
                 </div>
