--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <p class="role-bold">Rôle: Admin </p>
                 </div>
                 <div class="team-member">
-                    <img src="rs-flavien.png" alt="Avatar du Membre">
+                    <img src="OIP.png" alt="Avatar du Membre">
                     <h3>Flavien Drift</h3>
                     <p class="role-bold">Rôle: Resp. Staff </p>
                 </div>
